# SDL2_Widget_Qt5

./: .gitignore  CMakeLists.txt  SDL2Widget.cpp  SDL2Widget.h  main.cpp
